# maven-dependency-analyze

./: .eslintrc  .gitignore  .pnpmfile.cjs  AGENTS.md  Justfile  LICENSE  README.md  WARP.md  index.html  main.py  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  vite.config.ts
.roo/: mcp.json
.roo/rules-architect/: AGENTS.md
.roo/rules-ask/: AGENTS.md
.roo/rules-code/: AGENTS.md
.roo/rules-debug/: AGENTS.md
design/: design-document.md  development-standard.md  frontend-architecture.md  implementation-plan.md  system-architecture.md
example/: example-dependency-tree.json  example-deps-analysis.txt
output/: test-report.xlsx
src/: App.tsx  index.tsx
src/analyzer/: __init__.py  redundancy_analyzer.py  tree_analyzer.py
src/components/AnalysisReport/: AnalysisReport.tsx  ReportSection.tsx  index.ts
src/components/ChartView/: ChartNode.tsx  ChartView.tsx  index.ts
src/components/DependencyTree/: DependencyTree.tsx  TreeNode.tsx  index.ts
src/components/FileUploader/: FileUploader.tsx
src/components/common/: Button.tsx  Card.tsx  Modal.tsx  index.ts
src/contexts/: DependencyContext.tsx
src/exporter/: __init__.py  excel_exporter.py  tree_visualizer.py
src/hooks/: useAnalysis.ts  useDependencyParser.ts
src/models/: __init__.py  analysis_result.py  dependency.py
src/parser/: __init__.py  analysis_parser.py  tree_parser.py
src/routes/: index.tsx
src/styles/: globals.css
src/styles/components/: card.css  (+5 more)
src/types/: index.ts
src/utils/: __init__.py  algorithms.ts  file_utils.py  helpers.ts  parser.ts
(+2 files in other folders)
