[project]
name = "maven-dependency-analyze"
version = "0.1.0"
description = "java maven repository dependency analyze"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.10.0",
    "polars>=1.20.0",
    "xlsxwriter>=3.2.0",
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
